--- a/Final Grade Calculator/Base.lproj/Main.storyboard
+++ b/Final Grade Calculator/Base.lproj/Main.storyboard
@@ -1,24 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Final_Grade_Calculator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Current Grade" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W1g-Yr-frS">
+                                <rect key="frame" x="20" y="94" width="374" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="31k-ih-Blp"/>
+                                    <constraint firstAttribute="width" constant="374" id="59p-FM-K0v"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Desired Grade" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6c0-i6-uMW">
+                                <rect key="frame" x="20" y="151" width="374" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="eC3-8h-oHB"/>
+                                    <constraint firstAttribute="height" constant="34" id="zLb-9z-sLg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Final Exam % Worth" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CiX-Xy-HJX">
+                                <rect key="frame" x="20" y="210" width="374" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="SdD-Ad-ZPI"/>
+                                    <constraint firstAttribute="height" constant="34" id="vqi-SD-Faz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jF8-ud-RQ9">
+                                <rect key="frame" x="114" y="591" width="186" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="SqH-ma-FgN"/>
+                                    <constraint firstAttribute="width" constant="186" id="Xdp-FJ-Vuo"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="What Grade Do I Need?"/>
+                                <connections>
+                                    <action selector="gradeNeededButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jX5-Wn-7eX"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5o-ii-O7n">
+                                <rect key="frame" x="114" y="678" width="186" height="56"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="CiX-Xy-HJX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1EG-DY-v7L"/>
+                            <constraint firstItem="W1g-Yr-frS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="2gA-Xf-uvP"/>
+                            <constraint firstItem="jF8-ud-RQ9" firstAttribute="top" secondItem="CiX-Xy-HJX" secondAttribute="bottom" constant="347" id="558-tD-uNN"/>
+                            <constraint firstItem="CiX-Xy-HJX" firstAttribute="top" secondItem="6c0-i6-uMW" secondAttribute="bottom" constant="25" id="7DS-Ft-Amp"/>
+                            <constraint firstItem="W1g-Yr-frS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Tq3-i0-QLg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CiX-Xy-HJX" secondAttribute="trailing" constant="20" id="VjP-a3-G3B"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6c0-i6-uMW" secondAttribute="trailing" constant="20" id="WcD-3G-tQo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="W1g-Yr-frS" secondAttribute="trailing" constant="20" id="Whf-N0-V3n"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jF8-ud-RQ9" secondAttribute="trailing" constant="114" id="Wpb-AF-nKS"/>
+                            <constraint firstItem="6c0-i6-uMW" firstAttribute="top" secondItem="W1g-Yr-frS" secondAttribute="bottom" constant="23" id="hI5-Yl-8NB"/>
+                            <constraint firstItem="jF8-ud-RQ9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="114" id="nt7-We-Dhy"/>
+                            <constraint firstItem="6c0-i6-uMW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="sU1-fR-6n3"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="currentGradeTextField" destination="W1g-Yr-frS" id="xf7-bu-OEp"/>
+                        <outlet property="desiredGradeTextField" destination="6c0-i6-uMW" id="JoM-no-6Zk"/>
+                        <outlet property="finalWorthTextField" destination="CiX-Xy-HJX" id="V2Y-CC-EX5"/>
+                        <outlet property="gradeNeededLabel" destination="m5o-ii-O7n" id="APa-R6-Muy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="68.973214285714278"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
